--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ html, body {
 }
 
 canvas{
-  padding: 0;
+  /*padding: 0;
   margin: auto;
-  display: block;
+  display: block;*/
   border: 2px solid black;
   border: solid #f79533;
   border-radius: 2em;
@@ -49,6 +49,25 @@ canvas{
   border: none;
   width: 70px;
   height: 40px;
+  outline: none;
+}
+
+#change_backround{
+  font-family: 'Quicksand';
+  font-weight: 600;
+  font-size: 20px;
+  width: 6cm;
+  height: 1cm;
+  background: transparent;
+  border: solid #f79533;
+  border-width: 0.1cm;
+  border-radius: 1.5em;
+  -webkit-animation: border_gradient_button 5s ease alternate infinite;
+  transition: all 0.2s ease-in-out;
+  outline: none;
+}
+#change_backround:hover{
+  transform: scale(1.1);
   outline: none;
 }
   
